# mfw

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  README.md
cmake/: dev-mode.cmake  install-rules.cmake  shader-compile.cmake  variables.cmake
shader/: shader.frag  shader.vert
source/: lib.cpp  main.cpp
test/: CMakeLists.txt
test/source/: mfw_test.cpp
